@@ -1,3 +1,8 @@
+2010-05-25  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* sfcBroker.c:
+	[ 3006690 ] Remove startSLPAgent sections from sfcBroker
+
 2010-05-24  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* configure.ac
